<resources>
    <string name="app_name">DactylTranslator</string>
    <string name="button_capture">capture</string>
    <string name="button_toggle">toggle</string>
    <string name="start_translate_text">This will be the text.</string>
    <string name="settings_name">Settings</string>
    <string name="lessons_name">To study</string>
    <string name="graphics_editor_name">Graphics editor</string>
    <string name="clear_toast_text">Cleared</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_score_text">Your score</string>
    <string name="hint_rating_text">Your rating</string>
    <string name="hint_name_text">Your name</string>
    <string name="score_text">Score:</string>
    <string name="rating_text">Rating:</string>
    <string name="start_game_text">Start Game</string>
    <string name="start_guide_text">Start Guide</string>
    <string name="score_of_game">Score</string>
    <string name="level_of_game">Level</string>
    <string name="hint_level_of_game">Your level</string>
    <string name="hint_score_of_game">Your Score</string>
    <string name="log_out">Log Out (Account)</string>
    <string name="answer">Show the letter</string>
    <string name="next_level">Next Level</string>
    <string name="attempts">Attempts</string>
    <string name="hint_score_of_level">Your score of Level</string>
    <string name="edit_graph_text">Write here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="city_tv">City:</string>
    <string name="city">Moscow</string>
    <string name="platform_tv">Platform:</string>
    <string name="platform">RUDN</string>
    <string name="author_tv">Author:</string>
    <string name="author">Korolev Vladislav Denisovich</string>
    <string name="teacher_tv">Teacher:</string>
    <string name="teacher">Stepanov Pavel Valerievich</string>



</resources>