<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/image_person"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/common_google_signin_btn_icon_dark"
                        android:scaleType="fitEnd"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/name_person"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:hint="@string/hint_name_text"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeStepGranularity="2sp"
                            app:autoSizeTextType="uniform" />

                        <ProgressBar
                            android:id="@+id/score_progress_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:progress="60"
                            android:progressTint="@color/blue" />

                        <TextView
                            android:id="@+id/score_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="right"
                            android:hint="@string/hint_score_of_game"
                            android:paddingRight="10dp"
                            android:textSize="16sp" />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/log_out_button"
                            android:background="@drawable/round_rectangle"
                            android:backgroundTint="@color/browser_actions_bg_grey"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/log_out"
                            android:textColor="#A3A3A3"
                            android:textSize="12sp"
                            />


                    </LinearLayout>

                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    android:elevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/level_of_game"
                            android:gravity="center"
                            android:textSize="25sp"/>
                        <TextView
                            android:id="@+id/level_person"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_level_of_game"
                            android:gravity="center"
                            android:textSize="25sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/game_button"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="35dp"
                            android:paddingTop="8dp"
                            android:src="@drawable/ic_dactyllogosvg" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center"
                            android:paddingBottom="10dp"
                            android:text="@string/start_game_text"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/guide_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:text="@string/start_guide_text"
                android:drawableStart="@drawable/ic_info_24"
                android:paddingHorizontal="20dp"
                android:layout_margin="10dp"
                android:textAlignment="center" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>