<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game.GameTransitionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_person"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitEnd"
                android:src="@drawable/common_google_signin_btn_icon_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/name_person"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:hint="@string/hint_name_text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <ProgressBar
                    android:id="@+id/score_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="60"
                    android:progressTint="@color/blue"/>

                <TextView
                    android:id="@+id/score_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="right"
                    android:hint="@string/hint_score_of_game"
                    android:paddingRight="10dp"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginVertical="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_score_of_level"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:gravity="center"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:progress="60"
            android:layout_height="match_parent"
            android:progressTint="@color/blue"/>

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_level_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rectangle"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/next_level"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>